fixed spacing on book-class

--- a/client/src/components/pages/bookClasses/bookclasses.css
+++ b/client/src/components/pages/bookClasses/bookclasses.css
@@ -1,5 +1,5 @@
 .bookClasses{
-    margin-top: 40px;
+    margin-top: 20px;
     width: 100vw;
     height: 100vh;
     background: #f9f9f9;
